--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Beetroot (Beta Vulgaris)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif" rel="stylesheet">
+  <link href="stylish-beets/css/main.css" rel="stylesheet">
 </head>
 
 <body>
